# reptends

./: .gitignore  AGENTS.md  AGENT_TRACK_PLAYBOOK.md  CLAUDE.md  DISCOVERIES.md  README.md  ROADMAP.md  backwards-proof.py  nineteen.py  pattern_analysis.py  prime_sweep.py  progression-proof.py  pyproject.toml  qr-reptends.agda-lib  reptend_analysis.py
.github/workflows/: ci.yml
agda/: qr-reptends.agda-lib
agda/Examples/: Composite96.agda  Prime97.agda
agda/GeometricStack/: Capacity.agda  Family.agda  OrbitBufferDuality.agda  Positional.agda
agda/QRTour/: Cosets.agda  PrimeField.agda  QuadraticResidues.agda  RemainderOrbit.agda
bridge_reptends/: __init__.py  analysis.py  build_expository_note.py  ci_checks.py  composite.py  coset.py  orbit_weave.py  patterns.py  registry.py  search.py  sync_registry_docs.py  transducer.py  visibility.py
bridge_reptends/examples/: __init__.py  backwards.py  carry_transducer_demo.py  orbit_weave_demo.py  prime_19.py  progression.py
data/: claim_registry.json  counterexamples.json  example_atlas.json  lean_claim_carriers.json  lean_frontier_lanes.json  lean_module_index.json  lean_open_claim_boundaries.json  literature_map.json  sweep_500.csv  theorem_witnesses.json  vocabulary.json
docs/: AGDA_CORRESPONDENCE.md  CARRIED_PREFIX_VISIBILITY.md  CARRY_TRANSDUCER.md  COMPOSITES_CRT.md  COUNTEREXAMPLES.md  EXPOSITORY_NOTE.md  LITERATURE_MAP.md  PROOF_STATUS_ATLAS.md  ROADMAP.md  THEOREM_WITNESS_ATLAS.md  VOCABULARY.md
lean/: GeometricStack.lean  QRTour.lean  THEOREM_GUIDE.md  lake-manifest.json  lakefile.lean
lean/GeometricStack/: Capacity.lean  Family.lean  OrbitBufferDuality.lean  Positional.lean  Scale.lean  Valuation.lean
lean/QRTour/: Basic.lean  Bridge.lean  BridgeQuality.lean  CarryComparison.lean  CarryTransducer.lean  CompositePeriod.lean  CompositeVisibility.lean  CosetStructure.lean  Digits.lean  Examples.lean  OrbitWeave.lean  PAdicBridge.lean  Preperiod.lean  PrimitiveRoots.lean  QuadraticResidues.lean  RemainderOrbit.lean  SignedBridge.lean  Visibility.lean
qr_reptends/: __init__.py  analysis.py  patterns.py  sweep.py
qr_reptends/examples/: __init__.py  backwards.py  prime_19.py  (+1 more)
reptend-site/: README.md  index.html  package.json
scripts/: sweep_primes.py
site/: index.html  package.json
tests/: test_api_normalization.py  test_carry_transducer.py  test_composite_crt.py  test_doc_drift.py  test_expository_note.py  test_geometric_series.py  test_registry.py  test_search_datasets.py  test_stride_classification.py  test_theorem_witnesses.py  test_visibility.py
(+27 files in other folders)
