[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bridge-reptends"
version = "0.2.0"
description = "Bridge reptend analysis - geometric series structure in repeating decimals"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Mike Purvis"},
    {name = "Claude", email = "noreply@anthropic.com"},
]
keywords = [
    "number-theory",
    "modular-arithmetic",
    "reptends",
    "geometric-series",
    "bridge-primes",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.optional-dependencies]
dev = ["pytest", "mypy"]

[project.scripts]
sweep-primes = "bridge_reptends.sweep:main"

[project.urls]
Repository = "https://github.com/mpurvis/quadratic-residue-reptends"

[tool.setuptools.packages.find]
include = ["bridge_reptends*"]
